*************
version 3.2.1
*************

* updated SQLStatement::fetchColumns() to return an empty hash when no data is
  available in every case (issue 1241)
* fixed a memory leak in connection handling (issue 1272)


***********
version 3.2
***********

* added more Qore error and exception handling in ocilib object/NTY APIs
* ensure all strings written to the DB are converted to the target character
  encoding before writing
* copy all values when binding by value in case they are bound to an IN OUT
  variable, in which case memory corruption would occur previous to this
  change
* support for IN OUT variables by giving a hash argument with the "value" key
  as the input value for the output variable
* ignore placeholders and quotes in SQL comments
* user modules moved to top-level qore module directory from version-specific
  module directory since they are valid for multiple versions of qore
* fixed a major bug where a lost connection during an SQL operation using
  named types could cause a crash due to the database-specific private context
  becoming invalid and then used after deletion
* fixed a major bug where a crash generated internally in the OCI library
  would occur when NTYs were bound in a prepared statement and the statement
  was executed in a new logon session after transparent reconnection
* fixed bugs binding values to number attributes of NTYs and collections
* allow NTY keys to be given in lower case
* a proper exception is raised (instead of an assertion in debug mode or a
  crash) when there are multiple objects of different incompatible types added
  to a collection
* implemented binding number types by placeholder (including in/out vars)
* implemented binding arrays of scalar values for input and output
* implemented support for returning an empty list or hash after a short read
  with SQLStatement::fetchRows() or SQLStatement::fetchColumns(); if one of
  these methods is called a second time after returning an empty data