@@ -5,6 +5,7 @@ version 3.2.1
 * updated SQLStatement::fetchColumns() to return an empty hash when no data is
   available in every case (issue 1241)
 * fixed a memory leak in connection handling (issue 1272)
+* fixed a memory leak in error handling (issue 1583)
 
 
 ***********
